--- a/styles.css
+++ b/styles.css
@@ -573,6 +573,17 @@ body {
     }
 }
 
+/* Container for each section */
+.shoutouts-section {
+    background-color: var(--content-bg);
+    border: 2px solid var(--border-color);
+    border-radius: 15px;
+    padding: 25px;
+    margin: 40px auto;
+    max-width: 1400px;
+    box-shadow: 0 4px 8px var(--shadow-color);
+}
+
 /* TikTok Creator Shoutouts */
 .tiktok-creator-section {
     background-color: var(--content-bg);
@@ -735,22 +746,22 @@ body {
 
 /* Unavailable Message Styles */
 .unavailable-message {
-  color: var(--secondary-text);
-  font-size: 18px;
-  margin-top: 20px;
-  text-align: center;
-  background-color: var(--content-bg);
-  padding: 20px;
-  border: 2px solid var(--accent-color);
-  border-radius: 10px;
-  box-shadow: 0 4px 8px var(--shadow-color);
+    color: var(--secondary-text);
+    font-size: 18px;
+    margin-top: 20px;
+    text-align: center;
+    background-color: var(--content-bg);
+    padding: 20px;
+    border: 2px solid var(--accent-color);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px var(--shadow-color);
 }
 
 .unavailable-message-title {
-  font-size: 22px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  color: var(--text-color);
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: var(--text-color);
 }
 
 :root {
